--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -814,7 +814,7 @@ body, html {
   margin-bottom: 1 5px;
 }
 
-.search-box {
+.search-box-faq {
   position: relative;
   margin-top: 0;
 }
@@ -937,7 +937,7 @@ body, html {
   justify-content: center;
   margin: 0;
 }
-h2 {
+.contact-faq h2 {
   color: white;
   font-family: 'Montserrat', sans-serif; 
   margin: 0 0 20px;
@@ -962,3 +962,125 @@ h2 {
 .button-faq:hover {
   background-color: #729486; 
 }
+
+/**/
+
+.Centro-de-ayuda {
+  position: relative;
+  width: 100%;
+  height: 462px;
+  background-color: #FDFBE1;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.Centro-de-ayuda::before {
+  content: '';
+  position: absolute;
+  width: 583px;
+  height: 583px;
+  background-color: rgba(246, 192, 54, 0.6);
+  border-radius: 50% 50% 0 0;
+  top: 170px;
+  left: 772px;
+  clip-path: polygon(0 0, 100% 0, 100% 50%, 0 50%);
+}
+
+.Centro-de-ayuda h1 {
+  position: absolute;
+  left: 132px;
+  top: 140px;
+  color: #323842;
+  font-size: 52px;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  line-height: 74px;
+}
+
+.search-box-centro {
+  position: absolute;
+  left: 132px;
+  top: 260px;
+  background: white;
+  border-radius: 12px;
+  border: 1px #B1B1B1 solid;
+  padding: 12px 150px; 
+  display: flex;
+  gap: 8px;
+}
+
+.search-box-centro input {
+  flex: 1;
+  padding: 8px; 
+  border: none;
+  border-radius: 8px;
+  outline: none;
+}
+
+.Chart-suport, .atencion24-7 {
+  position: absolute;
+  padding: 7px 11px;
+  border-radius: 18px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.Chart-suport {
+  left: 1127px;
+  top: 160px;
+  background: #437F54;
+  color: white;
+}
+
+/* Estilo del ícono de reloj y texto "24/7" */
+.atencion24-7 {
+  left: 768px;
+  top: 251px;
+  background: #A5D290;
+  color: white;
+}
+
+.imagen-de-mujer{
+  position: absolute;
+  left: 850px;
+  top: 100px;
+}
+
+#cositas {
+  text-align: center;
+  padding: 70px 0;
+  height: 462px;
+}
+
+#cositas i{
+  font-size: 50px;
+}
+.container {
+max-width: 1200px;
+margin: 0 auto;
+}
+
+.grupo-contenedor-cositas-1{
+display: flex;
+justify-content:space-around;
+margin-top: 60px;
+}
+
+.grupo-contenedor-cositas-2{
+display: flex;
+justify-content:space-around;
+margin-top: 100px;
+}
+
+.grupo-contenedor-cositas-1-1, 
+.grupo-contenedor-cositas-1-2, 
+.grupo-contenedor-cositas-1-3,
+.grupo-contenedor-cositas-2-1,
+.grupo-contenedor-cositas-2-2,
+.grupo-contenedor-cositas-2-3{
+  width: 300px;
+  height: 100px;
+}
+
