feat(features): added benefits section

--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -1247,3 +1247,54 @@ margin-top: 100px;
   background-color: #9095A0; 
   margin-left: 0;
 }
+
+/**/
+.seccion-1{
+    background-color: #FFFFFF;
+    margin-top: 100px;
+    flex-direction: column;
+}
+
+.seccion-1 p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #323842;
+    font-size: 16px;
+    font-family: 'Inter',sans-serif;
+    font-weight: 400;
+    line-height: 22px;
+    word-wrap: break-word;
+    margin-bottom: 0;
+}
+
+.seccion-1 h1{
+    font-size: 40px;
+    font-weight: 700;
+    color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.imagen_seccion1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icono_play i{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    color: #7ABD8D;
+    position: absolute;
+    top: 400px;
+    left: 50%;
+}
+
+.imagen_seccion1 img{
+    border-radius: 2% 2% 2% 2%;
+}
