--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -1298,3 +1298,186 @@ margin-top: 100px;
 .imagen_seccion1 img{
     border-radius: 2% 2% 2% 2%;
 }
+
+.beneficios, .beneficios-2{
+  display: flex;
+  justify-content:space-evenly;
+  flex-direction: row;
+}
+
+.beneficios-2{
+  margin-top: 180px;
+  margin-bottom: 100px;
+}
+
+.beneficios h3, .beneficios-2 h3{
+  color: #323842;
+  font-size: 24px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  line-height: 36px;
+  word-wrap: break-word
+}
+.beneficios p, .beneficios-2 p{
+  color: #323842;
+font-size: 20px;
+font-weight: 400;
+line-height: 30px;
+word-wrap: break-word;
+}
+.seccion-2 h1{
+    font-size: 48px;
+    font-weight: 700;
+    color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    margin-bottom:60px ;
+}
+.seccion-2 i{
+    font-size: 48px;
+    color: #7ABD8D;
+}
+
+.seccion-2-1, .seccion-2-2, .seccion-2-3, .seccion-2-4{
+    width: 500px;
+    height: 100px;
+}
+.seccion-3{
+  margin-bottom: 60px;
+}
+.texto {
+    position: absolute;
+    top:  215%;
+    left: 580px;
+    width: 360px;
+    height: 100px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.seccion-3 h1{
+    margin:0;
+    font-size: 120px;
+    font-weight: 700;
+    color: #437F54;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.seccion-3 h3{
+    font-family: 'Montserrat', sans-serif;
+    font-style: bold;    
+    color: #323842;
+    font-size: 24px;
+    font-weight: 700;
+    word-wrap: break-word;
+    margin:0;
+}
+
+.seccion-3 p{
+    color: #000000;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.todo-imagen-seccion-3 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.todo-imagen-seccion-3 .imagen1,
+.todo-imagen-seccion-3 .imagen8 {
+    width: 100px; 
+    height: 100px; 
+    margin: 10px; 
+    margin-top: 420px; 
+    font-size: 50px;
+}
+.todo-imagen-seccion-3 .imagen2,
+.todo-imagen-seccion-3 .imagen7 {
+    width: 100px; 
+    height: 100px; 
+    margin: 10px; 
+    margin-top: 120px; 
+    font-size: 50px;
+}
+
+
+.todo-imagen-seccion-3 .imagen3,
+.todo-imagen-seccion-3 .imagen6{
+    width: 100px; 
+    height: 100px; 
+    margin-top: 310px; 
+    font-size: 50px;
+}
+.todo-imagen-seccion-3 .imagen3{
+  margin-left: 20px;
+}
+
+.todo-imagen-seccion-3 .imagen4,
+.todo-imagen-seccion-3 .imagen5{
+    width: 100px; 
+    height: 100px; 
+    margin: 10px; 
+    margin-top: 100px; 
+    font-size: 50px;
+}
+
+.seccion-4{
+  display: flex;
+  margin: 40px 0;
+}
+
+.seccion-testimonios{
+  display: flex;
+  flex-direction: column;
+  padding:0 100px;
+}
+.seccion-4 i{
+    color: #F3C63F;
+}
+
+.seccion-4 .Tertimonios{
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    color: #323842;
+    font-weight: 400;
+    margin: 0;
+}
+
+.section4-imagen{
+    width: 360px;
+    height: 100px;
+    margin-right: 50px;
+}
+
+.section4-imagen2{
+    height: 100px;
+    margin: 0;
+}
+
+.comentario {
+  width: 65%;
+    font-family: 'Montserrat', sans-serif;
+    color: #323842;
+    font-size: 27px;
+    font-weight: 400;
+    line-height: 40px;
+    word-wrap: break-word
+}
+
+#comentarios .comentario:nth-child(even) {
+    top: 0;
+}
+
+
+
