--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -1480,4 +1480,138 @@ word-wrap: break-word;
 }
 
 
+/**/
+.plans-section {
+  font-family: 'Arial', sans-serif;
+  text-align: center;
+  background: #ffffff;
+  padding: 40px 0;
+}
 
+.plans-section h1 {
+  color: #2c3e50;
+  font-size: 2.5rem;
+}
+
+.description {
+  color: #7f8c8d;
+  margin-bottom: 2rem;
+}
+
+.plans-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.plan-card {
+  background: #ffffff;
+  border-radius: 10px;
+  width: 300px;
+  padding: 1rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+
+.featured {
+  background: #437F54;
+  color: #ffffff;
+}
+
+.featured::after {
+  content: "★";
+  position: absolute;
+  top: -10px;
+  right: 10px;
+  font-size: 50px;
+  color: #ffffff;
+}
+
+.plan-card h2{
+  color: inherit;
+  margin: 0.5rem 0;
+}
+
+.price {
+  font-size: 3rem;
+  font-weight: bold;
+  color: inherit;
+}
+
+.price span {
+  font-size: 1rem;
+}
+
+.plan-description {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.plan-features,.plan-features-regular  {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 1rem;
+  text-align: left;
+}
+
+.plan-features li, .plan-features-regular li {
+  margin-bottom: 0.5rem;
+  line-height: 1.5;
+}
+
+.plan-features li::before {
+  content: "✔";
+  color: #27ae60;
+  margin-right: 10px;
+}
+.plan-features-regular li::before {
+  content: "✔";
+  color: #ffffff;
+  margin-right: 10px;
+}
+.plan-button-premium{
+  background: #ffffff;
+  border-radius: 20px;
+  padding: 10px 20px;
+  cursor: pointer;
+  width: 70%;
+  font-weight: bold;
+  margin-top:20px;
+  margin-bottom: 20px;
+}
+.plan-button-basic{
+  background: #ffffff;
+  border-radius: 20px;
+  padding: 10px 20px;
+  cursor: pointer;
+  width: 70%;
+  font-weight: bold;
+  margin-top:80px;
+  margin-bottom: 20px;
+}
+.plan-button-regular{
+  background: #ffffff;
+  border-style:none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  width: 70%;
+  margin-top:50px;
+  margin-bottom: 20px;
+}
+.plan-card button:hover{
+  background: #4caf50;
+  color: #ffffff;
+}
+.plan-card:hover{
+  transform: translateY(-20px);
+}
+
+.plan-card{
+  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out; 
+}
+@media (max-width: 990px) {
+  .plans-container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
