chore(styles): correction in styles

--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -1276,6 +1276,7 @@ margin-top: 100px;
     justify-content: center;
     align-items: center;
     font-family: 'Montserrat', sans-serif;
+    margin:10px 0;
 }
 
 .imagen_seccion1{
